TestSuite/errors/err0280.pas
type TClass = static class
end;
TDer = class(TClass)
end;

begin
end.